; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_mach_sync_ipc_link_monitoring_start.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_mach_sync_ipc_link_monitoring_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_DEAD = common dso_local global i32 0, align 4
@MACH_PORT_RIGHT_SEND = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mach_sync_ipc_link_monitoring_start(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32, i32* @MACH_PORT_DEAD, align 4
  %8 = load i32*, i32** %3, align 8
  store i32 %7, i32* %8, align 4
  %9 = call i32 (...) @mig_get_special_reply_port()
  store i32 %9, i32* %4, align 4
  %10 = call i32 (...) @mach_task_self()
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MACH_PORT_RIGHT_SEND, align 4
  %13 = call i64 @mach_port_mod_refs(i32 %10, i32 %11, i32 %12, i32 1)
  store i64 %13, i64* %6, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @KERN_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %2, align 8
  br label %35

19:                                               ; preds = %1
  %20 = call i32 (...) @mach_task_self()
  %21 = load i32, i32* %4, align 4
  %22 = call i64 @_kernelrpc_mach_port_special_reply_port_reset_link(i32 %20, i32 %21, i32* %5)
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* @KERN_SUCCESS, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %19
  %27 = call i32 (...) @mach_task_self()
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @mach_port_deallocate(i32 %27, i32 %28)
  %30 = load i64, i64* %6, align 8
  store i64 %30, i64* %2, align 8
  br label %35

31:                                               ; preds = %19
  %32 = load i32, i32* %4, align 4
  %33 = load i32*, i32** %3, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i64, i64* %6, align 8
  store i64 %34, i64* %2, align 8
  br label %35

35:                                               ; preds = %31, %26, %17
  %36 = load i64, i64* %2, align 8
  ret i64 %36
}

declare dso_local i32 @mig_get_special_reply_port(...) #1

declare dso_local i64 @mach_port_mod_refs(i32, i32, i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i64 @_kernelrpc_mach_port_special_reply_port_reset_link(i32, i32, i32*) #1

declare dso_local i32 @mach_port_deallocate(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
